<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boas_vindas"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:layout_width="324dp"
        android:layout_height="91dp"
        android:gravity="center"
        android:text="@string/descubra_seu_perfil_de_sa_de_e_receba_recomenda_es_personalizadas"
        android:textSize="20sp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/boasVindas"
        app:layout_constraintStart_toStartOf="@+id/boasVindas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />


    <ImageView
        android:id="@+id/logoFit"
        android:layout_width="191dp"
        android:layout_height="182dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/fit_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnComece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comece_aqui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/boasVindas"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/boasVindas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

</androidx.constraintlayout.widget.ConstraintLayout>